--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -241,7 +241,7 @@ controller:
 
   # List of plugins to be install during Jenkins controller start
   installPlugins:
-    - kubernetes:3734.v562b_b_a_627ea_c
+    - kubernetes:3900.va_dce992317b_4
     - workflow-aggregator:590.v6a_d052e5a_a_b_5
     - git:4.13.0
     - configuration-as-code:1569.vb_72405b_80249
