git, github 플러그인 추가 및 버전 변경

--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -243,8 +243,9 @@ controller:
   installPlugins:
     - kubernetes:3900.va_dce992317b_4
     - workflow-aggregator:590.v6a_d052e5a_a_b_5
-    - git:4.13.0
+    - git:5.0.0
     - configuration-as-code:1569.vb_72405b_80249
+    - github:1.37.0
 
   # Set to false to download the minimum required version of all dependencies.
   installLatestPlugins: true
