html-publisher:1.31 플러그인 추가

--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -246,6 +246,7 @@ controller:
     - git:5.0.0
     - configuration-as-code:1569.vb_72405b_80249
     - github:1.37.0
+    - html-publisher:1.31
 
   # Set to false to download the minimum required version of all dependencies.
   installLatestPlugins: true
