--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -325,7 +325,7 @@ controller:
   # become the content of the configuration yaml file.  The first line after this is a JCasC root element, eg jenkins, credentials,
   # etc.  Best reference is https://<jenkins_url>/configuration-as-code/reference.  The example below creates a welcome message:
   JCasC:
-    defaultConfig: false
+    defaultConfig: true
     configUrls: []
     # - https://acme.org/jenkins.yaml
     # Remote URL:s for configuration files.
