--- a/jenkins/values_bk.yaml
+++ b/jenkins/values_bk.yaml
@@ -13,17 +13,14 @@
 # ref: https://github.com/kubernetes/dns/blob/master/docs/specification.md
 clusterZone: "cluster.local"
 
-# The URL of the Kubernetes API server
-kubernetesURL: "https://kubernetes.default"
-
 renderHelmLabels: true
 
 controller:
   # Used for label app.kubernetes.io/component
   componentName: "jenkins-controller"
   image: "jenkins/jenkins"
-  # tag: "2.426.1-jdk17"
-  tagLabel: jdk17
+  # tag: "2.387.1-jdk11"
+  tagLabel: jdk11
   imagePullPolicy: "Always"
   imagePullSecretName:
   # Optionally configure lifetime for controller-container
@@ -146,8 +143,8 @@ controller:
   #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
   # Put labels on Jenkins controller pod
   podLabels: {}
-  # Used to create Ingress record (should be used with ServiceType: ClusterIP)
-  # nodePort: <to set explicitly, choose port between 30000-32767
+  # Used to create Ingress record (should used with ServiceType: ClusterIP)
+  nodePort: 30880
   # Enable Kubernetes Startup, Liveness and Readiness Probes
   # if Startup Probe is supported, enable it too
   # ~ 2 minutes to allow Jenkins to restart when upgrading plugins. Set ReadinessTimeout to be shorter than LivenessTimeout.
@@ -369,7 +366,7 @@ controller:
       # jcasc changes will cause a reboot and will only be applied at the subsequent start-up.  Auto-reload uses the
       # http://<jenkins_url>/reload-configuration-as-code endpoint to reapply config when changes to the configScripts are detected.
       enabled: true
-      image: kiwigrid/k8s-sidecar:1.24.4
+      image: kiwigrid/k8s-sidecar:1.15.0
       imagePullPolicy: IfNotPresent
       resources: {}
         #   limits:
@@ -571,9 +568,6 @@ controller:
 
   httpsKeyStore:
     jenkinsHttpsJksSecretName: ''
-    jenkinsHttpsJksSecretKey: "jenkins-jks-file"
-    jenkinsHttpsJksPasswordSecretName: ""
-    jenkinsHttpsJksPasswordSecretKey: "https-jks-password"
     enable: false
     disableSecretMount: false
     httpPort: 8081
@@ -626,20 +620,16 @@ controller:
 agent:
   enabled: true
   defaultsProviderTemplate: ""
-  # URL for connecting to the Jenkins controller
+  # URL for connecting to the Jenkins contoller
   jenkinsUrl:
   # connect to the specified host and port, instead of connecting directly to the Jenkins controller
   jenkinsTunnel:
   kubernetesConnectTimeout: 5
   kubernetesReadTimeout: 15
   maxRequestsPerHostStr: "32"
-  retentionTimeout: 5
-  waitForPodSec: 600
   namespace:
-  # private registry for agent image
-  jnlpregistry:
   image: "jenkins/inbound-agent"
-  tag: "3107.v665000b_51092-15"
+  tag: "4.11.2-4"
   workingDir: "/home/jenkins/agent"
   nodeUsageMode: "NORMAL"
   customJenkinsLabels: []
@@ -656,18 +646,9 @@ agent:
     requests:
       cpu: "512m"
       memory: "512Mi"
-      # ephemeralStorage:
     limits:
       cpu: "512m"
       memory: "512Mi"
-      # ephemeralStorage:
-  livenessProbe: {}
-#    execArgs: "cat /tmp/healthy"
-#    failureThreshold: 3
-#    initialDelaySeconds: 0
-#    periodSeconds: 10
-#    successThreshold: 1
-#    timeoutSeconds: 1
   # You may want to change this to true while testing a new image
   alwaysPullImage: false
   # Controls how agent pods are retained after the Jenkins build completes
@@ -860,11 +841,6 @@ persistence:
   labels: {}
   accessMode: "ReadWriteOnce"
   size: "8Gi"
-  # Existing data source to clone PVC from
-  # ref: https://kubernetes.io/docs/concepts/storage/volume-pvc-datasource/
-  dataSource:
-  #   name: PVC-NAME
-  #   kind: PersistentVolumeClaim
   volumes:
   #  - name: nothing
   #    emptyDir: {}
@@ -999,4 +975,4 @@ helmtest:
   bats:
     # Bash Automated Testing System (BATS)
     image: "bats/bats"
-    tag: "1.9.0"
+    tag: "1.2.1"
