--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -244,11 +244,11 @@ controller:
 
   # List of plugins to be install during Jenkins controller start
   installPlugins:
-    - kubernetes:3900.va_dce992317b_4
-    - workflow-aggregator:590.v6a_d052e5a_a_b_5
-    - git:5.0.0
-    - configuration-as-code:1569.vb_72405b_80249
-    - github:1.37.0
+    - kubernetes:4029.v5712230ccb_f8
+    - workflow-aggregator:596.v8c21c963d92d
+    - git:5.2.0
+    - configuration-as-code:1670.v564dc8b_982d0
+    - github:1.37.3.1
     - htmlpublisher:1.31
     - pipeline-stage-view:2.32
 
