--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -244,10 +244,10 @@ controller:
 
   # List of plugins to be install during Jenkins controller start
   installPlugins:
-    - kubernetes:4029.v5712230ccb_f8
-    - workflow-aggregator:596.v8c21c963d92d
-    - git:5.2.0
-    - configuration-as-code:1670.v564dc8b_982d0
+    - kubernetes:4290.v93ea_4b_b_26a_61
+    - workflow-aggregator:600.vb_57cdd26fdd7
+    - git:5.5.1
+    - configuration-as-code:1850.va_a_8c31d3158b_
     - github:1.37.3.1
     - htmlpublisher:1.32
     - pipeline-stage-view:2.32
